--- a/melo/configs/config.json
+++ b/melo/configs/config.json
@@ -21,8 +21,8 @@
     "skip_optimizer": true
   },
   "data": {
-    "training_files": "",
-    "validation_files": "",
+    "training_files": "/ws/dataset/train.list",
+    "validation_files": "/ws/dataset/val.list",
     "max_wav_value": 32768.0,
     "sampling_rate": 44100,
     "filter_length": 2048,
